<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity"
    android:background="@color/azulito">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imgBtnEvent"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/verdeBarraEstatus"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/txtNom"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp"
                android:text="Nombre"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="2dp"
                android:background="@color/verdeclarito">

                <TextView
                    android:id="@+id/txtTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tipo"
                    android:textSize="17dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
                <TextView
                    android:id="@+id/txtCat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Categoria"
                    android:textSize="17dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"  />


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_descripcion"
                android:textSize="19dp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/txtDescri"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="texto"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="16dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <Button
                android:id="@+id/btnContra"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/lab_btnContra"
                android:textColor="#707070"
                app:backgroundTint="@color/amarillito"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnPubli"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/lab_btnPubli"
                android:textColor="#707070"
                app:backgroundTint="@color/amarillito"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/lab_btnBorrar"
                android:textColor="#707070"
                app:backgroundTint="@color/amarillito"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>